--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,7 @@
 	<classpathentry kind="lib" path="lib-common/jsr173_api.jar"/>
 	<classpathentry kind="lib" path="lib-common/jsr181-api.jar"/>
 	<classpathentry kind="lib" path="lib-common/jsr250-api.jar"/>
-	<classpathentry kind="lib" path="lib-common/openmrs-api-1.6.0.8979-dev.jar"/>
+	<classpathentry kind="lib" path="lib-common/openmrs-api-1.6.0.9830-dev.jar"/>
 	<classpathentry kind="lib" path="lib-common/resolver.jar"/>
 	<classpathentry kind="lib" path="lib-common/saaj-api.jar"/>
 	<classpathentry kind="lib" path="lib-common/saaj-impl.jar"/>
@@ -24,9 +24,9 @@
 	<classpathentry kind="lib" path="lib-common/stax-ex.jar"/>
 	<classpathentry kind="lib" path="lib-common/streambuffer.jar"/>
 	<classpathentry kind="lib" path="lib-common/tests-openmrs-api-1.6.0.9132-dev.jar"/>
-	<classpathentry kind="lib" path="lib-common/web-openmrs-api-1.6.0.8979-dev.jar"/>
+	<classpathentry kind="lib" path="lib-common/web-openmrs-api-1.6.0.9866-dev.jar"/>
 	<classpathentry kind="lib" path="lib-common/xbean-spring-3.1.jar"/>
-	<classpathentry kind="lib" path="lib-common/webservices-1.0.omod"/>
+	<classpathentry kind="lib" path="lib-common/webservices.jaxws-1.1.omod"/>
 	<classpathentry kind="lib" path="/openmrs-trunk/lib/hibernate/hibernate325-mod.jar" sourcepath="/openmrs-source/hibernate-3.2.5ga-lite.zip"/>
 	<classpathentry kind="lib" path="/openmrs-trunk/lib/junit/dbunit-2.4.4.jar" sourcepath="/openmrs-source/dbunit-2.2-src.zip"/>
 	<classpathentry kind="lib" path="/openmrs-trunk/lib/junit/hsqldb-1.8.0.10.jar" sourcepath="/openmrs-source/hsqldb_1_8_0_9.zip"/>
